[gd_scene load_steps=4 format=3 uid="uid://7mxpp8utv0uj"]

[ext_resource type="Script" path="res://levels/prefabs/square.gd" id="1_jdf3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuw6y"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yukr4"]
resource_local_to_scene = true
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="Square" type="Node2D"]
script = ExtResource("1_jdf3m")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_cuw6y")

[node name="Panel" type="Panel" parent="."]
offset_right = 65.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yukr4")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
